Fix NPE in collectReferences
closes https://github.com/medizininformatik-initiative/torch/issues/726